Wrap long links in comments to prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
     pre {
         overflow-x: scroll;
     }
+    p > a {
+        word-break: break-all;
+    }
     a {
         @apply text-pink-700;
         @apply hover:underline;
